# ghedaquanglong

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: products.py  user.py
backend/app/core/: config.py
backend/app/db/: create_admin_user.py  mongodb.py  seed.py
backend/app/models/: product.py  user.py
backend/app/services/: product_service.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: AdminLogin.tsx  ProductForm.tsx  ProductList.tsx  login.tsx  page.tsx
frontend/app/api/categories/: route.ts
frontend/app/contact/: page.tsx
frontend/app/products/: page.tsx
frontend/components/: DropdownMenu.tsx  Header.tsx  Hero.tsx  ImageUploader.tsx  ProductCategoryFilter.tsx  ProductGrid.tsx  ProductList.tsx
frontend/lib/: api.ts  categories.ts  config.ts
src/: middleware.ts
src/app/: layout.tsx  page.metadata.ts  page.tsx
src/app/admin/: AdminLogin.tsx  ProductForm.tsx  ProductList.tsx  login.tsx  page.tsx
src/app/products/: ProductsClient.tsx  page.tsx
src/components/: Footer.tsx  Header.tsx  Hero.tsx  HomepageCarousel.tsx  ImageUploader.tsx  ProductCategoryFilter.tsx  ProductGrid.tsx
src/lib/: api.ts  auth.ts  mongodb.ts
src/lib/services/: product-service.ts  user-service.ts
src/lib/utils/: auth.ts
src/types/: index.ts  product.ts  user.ts
(+12 files in other folders)
